Changed from using % to pixel to scale the intro text from the top. Should be a final fix for the cover up issue of the navbar on mobile

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -177,7 +177,7 @@ hr {
 	font-size: 250%;
 	text-align: center;
 	color: #F5F1ED;
-	padding-top: 6%;
+	padding-top: 70px;
 }
 
 
